--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									a short line about yourself.
 								-->
 								<p>
-									Position <br> Institution
+									Senior Software Engineer <br> Accenture
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
@@ -74,10 +74,10 @@
 									<a href="#about">About Me</a>
 								</li>
 								<li>
-									<a href="#research">Research</a>
+									<a href="github.com/aaamourao">Projects</a>
 								</li>
 								<li>
-									<a href="#community">Community</a>
+									<a href="#community">Blog</a>
 								</li>
 								<li>
 									<a href="#contact">Contact</a>
