--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<a href="#about">About Me</a>
 								</li>
 								<li>
-									<a href="github.com/aaamourao">Projects</a>
+									<a href="#research">Projects</a>
 								</li>
 								<li>
 									<a href="#community">Blog</a>
@@ -101,15 +101,15 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/pic01.jpg" alt=""/>
+								<img src="images/profile.jpg" alt=""/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								<b>Education:</b>
+								<b>Education: Control and Automation Engineering - UFMG</b>
 							</p>
 							<p>
-								<b>Research Interests:</b>
+								<b>Research Interests: Algorithms, math, machine learning and music.</b>
 							</p>
 							<p>
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
