--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/profile.jpg" alt=""/>
+								<img src="images/me.jpeg" alt=""/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
@@ -109,10 +109,10 @@
 								<b>Education: Control and Automation Engineering - UFMG</b>
 							</p>
 							<p>
-								<b>Research Interests: Algorithms, math, machine learning and music.</b>
+								<b>Interests: Algorithms, math, machine learning and music.</b>
 							</p>
 							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
+								<b>Publications:</b> <a href="https://scholar.google.com/scholar?hl=pt-PT&as_sdt=0%2C5&q=calibra%C3%A7%C3%A3o+de+gir%C3%B4metros+utilizando+um+manipulador+rob%C3%B3tico&btnG=">Calibraçao de girômetros utilizando um manipulador robótico industrial</a>
 							</p>
 						</article>
 
