--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="files/adriano_CV_2020_en" target="_blank">Curriculum Vitae</a>
+									<a href="files/adriano_CV_2020_en.pdf" target="_blank">Curriculum Vitae</a>
 								</p>
 							</div>
 						</div>
