--- a/index.html
+++ b/index.html
@@ -106,10 +106,11 @@
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								<b>Education: Control and Automation Engineering - UFMG</b>
+								<b>Education:</b>  Control and Automation Engineering - UFMG
+								<br> Mobility, Integrated Master in Electrical and Computer Engineering
 							</p>
 							<p>
-								<b>Interests: Algorithms, math, machine learning and music.</b>
+								<b>Interests:</b>  Algorithms, math, machine learning and music.
 							</p>
 							<p>
 								<b>Publications:</b> <a href="https://scholar.google.com/scholar?hl=pt-PT&as_sdt=0%2C5&q=calibra%C3%A7%C3%A3o+de+gir%C3%B4metros+utilizando+um+manipulador+rob%C3%B3tico&btnG=">Calibraçao de girômetros utilizando um manipulador robótico industrial</a>
@@ -118,7 +119,7 @@
 
 						<!-- Here is the "Research" card. -->
 						<article id="research">
-							<h2 class="major">Research</h2>
+							<h2 class="major">Projects</h2>
 							<span class="image main">
 								<img src="images/pic02.jpg" alt=""/>
 							</span>
@@ -126,27 +127,24 @@
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
 									the next line.
 								-->
-								<b>Project I Title</b><br>Project description, including further links to posters, talks, publications.
+								<b>clDES I Parallel Algorithms for DES </b><br>C++14/OpenCL/OpenMP library for automata, discrete-event systems, digital controllers and their operators, (<a href="https://github.com/aaamourao/clDES">link</a>). 
 							</p>
 							<p>
-								<b>Project II Title</b><br>Project description, including further links to posters, talks, publications.
+								<b>TOFU I Video Labeller tool</b><br> TOFU is a minimalist tool for labelling video clips, e.g. activities, in the context of Deep Learning applications,(<a href="https://github.com/smartops-project/tofu_video_labeller">link</a>).
+							</p>
+							<p>
+								<b>SOFA I Face Anonymizer</b><br> Sofa is a minimalist tool for removing faces from a video, and removing clips which the algorithm wasn't succesfull, (<a href="https://github.com/smartops-project/sofa">link</a>).
 							</p>
 						</article>
 
 						<!-- Here is the "Community" card. -->
 						<article id="community">
-							<h2 class="major">Community</h2>
+							<h2 class="major">Blog</h2>
 							<span class="image main">
 								<img src="images/pic03.jpg" alt=""/>
 							</span>
 							<p>
-								<b>Teaching:</b>
-							</p>
-							<p>
-								<b>Outreach:</b>
-							</p>
-							<p>
-								<b>Equity & Inclusion:</b>
+								<b>Comming soon</b>
 							</p>
 						</article>
 
@@ -154,10 +152,10 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p> 
-								<b>Email:</b> 
+								<b>Email:</b> mourao.aaa@gmail.com 
 							</p>
 							<p> 
-								<b>Address:</b> 
+								<b>Email 2:</b> adrianomourao@protonmail.com 
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
@@ -170,25 +168,25 @@
 									<!-- 	Note that you need to change the link to point to your page.
 										Replace "#" with your Twitter profile page.
 									-->
-									<a href="#" class="icon fa-twitter">
+									<a href="https://twitter.com/drianbenson" class="icon fa-twitter">
 										<span class="label">Twitter</span>
-									</a>
-								</li>
-								<!-- The Facebook icon -->
-								<li>
-									<a href="#" class="icon fa-facebook">
-										<span class="label">Facebook</span>
 									</a>
 								</li>
 								<!-- The Instagram icon -->
 								<li>
-									<a href="#" class="icon fa-instagram">
+									<a href="https://www.instagram.com/drianbenson/" class="icon fa-instagram">
 										<span class="label">Instagram</span>
+									</a>
+								</li>
+								
+								<li>
+									<a href="https://www.linkedin.com/in/adriano-mour%C3%A3o/" class="icon fa-linkedin">
+										<span class="label">Linkedin</span>
 									</a>
 								</li>
 								<!-- The GitHub icon -->
 								<li>
-									<a href="#" class="icon fa-github">
+									<a href="https://github.com/aaamourao" class="icon fa-github">
 										<span class="label">GitHub</span>
 									</a>
 								</li>
@@ -211,7 +209,7 @@
 						<!-- 	You can change "Untitled" to your name to show everyone that
 							this is your work.
 						-->
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Adriano de Araújo Abreu Mourão. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
