--- a/index.html
+++ b/index.html
@@ -106,9 +106,12 @@
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								<b>Education:</b>  Control and Automation Engineering - UFMG
-								<br> Mobility, Integrated Master in Electrical and Computer Engineering
+								<b>Education:</b>  
 							</p>
+							<ul>
+								<li>2009-2014, 2018-2018: Control and Automation Engineering, Universidade Federal de Minas Gerais (UFMG), Belo Horizonte, Brazil</li>
+								<li>2012-2013: Sandwich Integrated Master in Electrical and Computer Engineering - University of Coimbra (UC), Coimbra, Portugal</li>
+							</ul>
 							<p>
 								<b>Interests:</b>  Algorithms, math, machine learning and music.
 							</p>
@@ -130,7 +133,7 @@
 								<b>clDES I Parallel Algorithms for DES </b><br>C++14/OpenCL/OpenMP library for automata, discrete-event systems, digital controllers and their operators, (<a href="https://github.com/aaamourao/clDES">link</a>). 
 							</p>
 							<p>
-								<b>TOFU I Video Labeller tool</b><br> TOFU is a minimalist tool for labelling video clips, e.g. activities, in the context of Deep Learning applications,(<a href="https://github.com/smartops-project/tofu_video_labeller">link</a>).
+								<b>TOFU I Video Labeller tool</b><br> TOFU is a minimalist tool for labelling video clips, e.g. activities, in the context of Deep Learning applications, (<a href="https://github.com/smartops-project/tofu_video_labeller">link</a>).
 							</p>
 							<p>
 								<b>SOFA I Face Anonymizer</b><br> Sofa is a minimalist tool for removing faces from a video, and removing clips which the algorithm wasn't succesfull, (<a href="https://github.com/smartops-project/sofa">link</a>).
