--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
 								<b>Interests:</b>  Algorithms, math, machine learning and music.
 							</p>
 							<p>
-								<b>Publications:</b> <a href="https://scholar.google.com/scholar?hl=pt-PT&as_sdt=0%2C5&q=calibra%C3%A7%C3%A3o+de+gir%C3%B4metros+utilizando+um+manipulador+rob%C3%B3tico&btnG=">Calibraçao de girômetros utilizando um manipulador robótico industrial</a>
+								<b>Publications:</b> MOURAO, A.A.A. ; PEREIRA, G. A. S. Calibração de girômetros utilizando um manipulador robótico industrial
+								In: Congresso Brasileiro de Automática, Campina Grande, PB.
+								Anais do XIX Congresso Brasileiro de Automática (CBA 12) p. 1863-1869, 
+								(<a href="spiral-code.org/files/CBA2012_GIRCAL.pdf">download</a>).
 							</p>
 						</article>
 
