fixing paper link

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 								<b>Publications:</b> MOURAO, A.A.A. ; PEREIRA, G. A. S. Calibração de girômetros utilizando um manipulador robótico industrial
 								In: Congresso Brasileiro de Automática, Campina Grande, PB.
 								Anais do XIX Congresso Brasileiro de Automática (CBA 12) p. 1863-1869, 
-								(<a href="spiral-code.org/files/CBA2012_GIRCAL.pdf">download</a>).
+								(<a href="files/CBA2012_GIRCAL.pdf">download</a>).
 							</p>
 						</article>
 
