--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
+								 Software Engineer, passionate for algorithms, math, machine learning and music. 
+							</p>
+							<p>
 								<!-- Items contained in <b> tags are bolded! -->
 								<b>Education:</b>  
 							</p>
@@ -113,14 +116,16 @@
 								<li>2012-2013: Sandwich Integrated Master in Electrical and Computer Engineering - University of Coimbra (UC), Coimbra, Portugal</li>
 							</ul>
 							<p>
-								<b>Interests:</b>  Algorithms, math, machine learning and music.
+								<b>Publications:</b>
 							</p>
-							<p>
-								<b>Publications:</b> MOURAO, A.A.A. ; PEREIRA, G. A. S. Calibração de girômetros utilizando um manipulador robótico industrial
+							<ul>
+								<li>
+								MOURAO, A.A.A. ; PEREIRA, G. A. S. Calibração de girômetros utilizando um manipulador robótico industrial
 								In: Congresso Brasileiro de Automática, Campina Grande, PB.
 								Anais do XIX Congresso Brasileiro de Automática (CBA 12) p. 1863-1869, 
 								(<a href="files/CBA2012_GIRCAL.pdf">download</a>).
-							</p>
+								</li>
+							</ul>
 						</article>
 
 						<!-- Here is the "Research" card. -->
