--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 						<article id="research">
 							<h2 class="major">Projects</h2>
 							<span class="image main">
-								<img src="images/fractal_on_nat.png" alt=""/>
+								<img src="images/fractal_on_nat.jpg" alt=""/>
 							</span>
 							<p>
 								<!-- 	A <br> tag puts in a break so that the text that follows it displays on
