--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						<article id="community">
 							<h2 class="major">Blog</h2>
 							<span class="image main">
-								<img src="images/pic03.jpg" alt=""/>
+								<img src="images/fractal_on_nat_2.jpg" alt=""/>
 							</span>
 							<p>
 								<b>Comming soon</b>
