--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 								<img src="images/fractal_on_nat_2.jpg" alt=""/>
 							</span>
 							<p>
-								<b>Comming soon</b>
+								<b>Coming soon</b>
 							</p>
 						</article>
 
