--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
-								 Software Engineer, passionate for algorithms, math, machine learning and music. 
+								 Software Engineer, passionate about algorithms, math, machine learning and music. 
 							</p>
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
