Updating job position

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 									a short line about yourself.
 								-->
 								<p>
-									R&D Software Engineer <br> Instituto de Pesquisas Eldorado
+									Software Developer Engineer <br> Amazon
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
