Adding blog url

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 									<a href="#research">Projects</a>
 								</li>
 								<li>
-									<a href="#community">Blog</a>
+									<a href="https://blog.spiral-code.org/">Blog</a>
 								</li>
 								<li>
 									<a href="#contact">Contact</a>
